--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
         </div>
         <div id="thesis-1" class="slide intro">
           <div class="wrapper">
-            <div class="introimage"><img data-src="" data-ext="" alt="" class="lazy titleImage"/></div>
+            <div class="introimage"><img data-src="br.png" data-ext="" alt="" class="lazy titleImage"/></div>
           </div>
           <div class="wrapper">
             <div class="introtext">
@@ -495,8 +495,8 @@
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
           <div class="wrapper imagewrapper">
-            <div class="image sizable"><img alt="" data-src="bugs_fabulous" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/bugs_fabulous.jpg"/></noscript>
+            <div class="image sizable"><img alt="" data-src="bugs-zoom2" data-ext=".jpg" class="lazy responsive"/>
+              <noscript><img alt="" src="img/400w/bugs-zoom2.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -511,8 +511,8 @@
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
           <div class="wrapper imagewrapper">
-            <div class="image sizable"><img alt="" data-src="bugs_bee" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/bugs_bee.jpg"/></noscript>
+            <div class="image sizable"><img alt="" data-src="bugs-zoom1" data-ext=".jpg" class="lazy responsive"/>
+              <noscript><img alt="" src="img/400w/bugs-zoom1.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -522,29 +522,13 @@
             </div>
           </div>
         </div>
-        <div id="bugs-5" class="slide">
+        <div id="bugs-5" class="slide last">
           <div class="wrapper buttonwrapper">
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
           <div class="wrapper imagewrapper">
-            <div class="image sizable"><img alt="" data-src="bugs2" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/bugs2.jpg"/></noscript>
-            </div>
-          </div>
-          <div class="wrapper textwrapper">
-            <div class="info sizable">
-              <div class="infoinner">
-              </div>
-            </div>
-          </div>
-        </div>
-        <div id="bugs-6" class="slide last">
-          <div class="wrapper buttonwrapper">
-            <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
-          </div>
-          <div class="wrapper imagewrapper">
-            <div class="image sizable"><img alt="" data-src="bugs1" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/bugs1.jpg"/></noscript>
+            <div class="image sizable"><img alt="" data-src="bugs-all" data-ext=".jpg" class="lazy responsive"/>
+              <noscript><img alt="" src="img/400w/bugs-all.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -561,7 +545,7 @@
         </div>
         <div id="love-1" class="slide intro">
           <div class="wrapper">
-            <div class="introimage"><img data-src="" data-ext="" alt="" class="lazy titleImage"/></div>
+            <div class="introimage"><img data-src="ornament.png" data-ext="" alt="" class="lazy titleImage"/></div>
           </div>
           <div class="wrapper">
             <div class="introtext">
@@ -602,7 +586,23 @@
             </div>
           </div>
         </div>
-        <div id="love-4" class="slide last">
+        <div id="love-4" class="slide">
+          <div class="wrapper buttonwrapper">
+            <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
+          </div>
+          <div class="wrapper imagewrapper">
+            <div class="image sizable"><img alt="" data-src="love3" data-ext=".jpg" class="lazy responsive"/>
+              <noscript><img alt="" src="img/400w/love3.jpg"/></noscript>
+            </div>
+          </div>
+          <div class="wrapper textwrapper">
+            <div class="info sizable">
+              <div class="infoinner">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="love-5" class="slide last">
           <div class="wrapper buttonwrapper">
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
