Update title images

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                   <!-- span.projectType #{project.desc}--><span class="projectTitle">BYU Tickets</span></span><img data-src="byutickets_full" data-ext=".jpg" alt="" class="lazy front"/></a><a href="#ls" class="projectLink"><span class="projectDesc">
                   <!-- span.projectType #{project.desc}--><span class="projectTitle">BYU Learning Suite</span></span><img data-src="ls-scores" data-ext=".png" alt="" class="lazy front"/></a><a href="#thesis" class="projectLink"><span class="projectDesc">
                   <!-- span.projectType #{project.desc}--><span class="projectTitle">Connections</span></span><img data-src="thesis_cards" data-ext=".jpg" alt="" class="lazy front"/></a><a href="#bugs" class="projectLink"><span class="projectDesc">
-                  <!-- span.projectType #{project.desc}--><span class="projectTitle">Specimens</span></span><img data-src="bugs_typographic" data-ext=".jpg" alt="" class="lazy front"/></a><a href="#love" class="projectLink"><span class="projectDesc">
+                  <!-- span.projectType #{project.desc}--><span class="projectTitle">Specimens</span></span><img data-src="bugs-zoom1" data-ext=".jpg" alt="" class="lazy front"/></a><a href="#love" class="projectLink"><span class="projectDesc">
                   <!-- span.projectType #{project.desc}--><span class="projectTitle">Love</span></span><img data-src="love1" data-ext=".jpg" alt="" class="lazy front"/></a><a href="#jonah" class="projectLink"><span class="projectDesc">
                   <!-- span.projectType #{project.desc}--><span class="projectTitle">Jonah</span></span><img data-src="jonah1" data-ext=".jpg" alt="" class="lazy front"/></a><a href="#ornate" class="projectLink"><span class="projectDesc">
                   <!-- span.projectType #{project.desc}--><span class="projectTitle">Ornate</span></span><img data-src="ornate_abuse_close" data-ext=".jpg" alt="" class="lazy front"/></a>
@@ -278,12 +278,12 @@
         </div>
         <div id="thesis-1" class="slide intro">
           <div class="wrapper">
-            <div class="introimage"><img data-src="br.png" data-ext="" alt="" class="lazy titleImage"/></div>
+            <div class="introimage"><img data-src="fraluca.png" data-ext="" alt="" class="lazy titleImage"/></div>
           </div>
           <div class="wrapper">
             <div class="introtext">
               <h3>Exhibition Design</h3>
-              <p><span style="margin-left:0" class="dropcap">F</span><span style="margin-left:-0.1em" class="leader">or my MFA thesis</span><span> I spent a semester in the IU Lilly Special Collections Library soaking in some of the most beautiful books in the world. I designed a library exhibition highlighting many of them, including the <i>Bruce Rogers World Bible</i>, Eric Gill’s <i>Four Gospels</i>, Kelmscott and Doves press masterpieces, Limited Editions and Grolier Club releases, Philip Smith bindings, Picasso and Braque illustrations, and other breathtaking works.</span></p>
+              <p><span style="margin-left:-0.25em" class="dropcap">F</span><span style="margin-left:-0.05em" class="leader">or my MFA thesis</span><span> I spent a semester in the IU Lilly Special Collections Library soaking in some of the most beautiful books in the world. I designed a library exhibition highlighting many of them, including the <i>Bruce Rogers World Bible</i>, Eric Gill’s <i>Four Gospels</i>, Kelmscott and Doves press masterpieces, Limited Editions and Grolier Club releases, Philip Smith bindings, Picasso and Braque illustrations, and other breathtaking works.</span></p>
             </div>
           </div>
         </div>
@@ -479,8 +479,8 @@
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
           <div class="wrapper imagewrapper">
-            <div class="image sizable"><img alt="" data-src="bugs_typographic" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/bugs_typographic.jpg"/></noscript>
+            <div class="image sizable"><img alt="" data-src="bugs-zoom1" data-ext=".jpg" class="lazy responsive"/>
+              <noscript><img alt="" src="img/400w/bugs-zoom1.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -495,8 +495,8 @@
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
           <div class="wrapper imagewrapper">
-            <div class="image sizable"><img alt="" data-src="bugs-zoom2" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/bugs-zoom2.jpg"/></noscript>
+            <div class="image sizable"><img alt="" data-src="bugs_typographic" data-ext=".jpg" class="lazy responsive"/>
+              <noscript><img alt="" src="img/400w/bugs_typographic.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -506,23 +506,7 @@
             </div>
           </div>
         </div>
-        <div id="bugs-4" class="slide">
-          <div class="wrapper buttonwrapper">
-            <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
-          </div>
-          <div class="wrapper imagewrapper">
-            <div class="image sizable"><img alt="" data-src="bugs-zoom1" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/bugs-zoom1.jpg"/></noscript>
-            </div>
-          </div>
-          <div class="wrapper textwrapper">
-            <div class="info sizable">
-              <div class="infoinner">
-              </div>
-            </div>
-          </div>
-        </div>
-        <div id="bugs-5" class="slide last">
+        <div id="bugs-4" class="slide last">
           <div class="wrapper buttonwrapper">
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
@@ -586,23 +570,7 @@
             </div>
           </div>
         </div>
-        <div id="love-4" class="slide">
-          <div class="wrapper buttonwrapper">
-            <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
-          </div>
-          <div class="wrapper imagewrapper">
-            <div class="image sizable"><img alt="" data-src="love3" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/love3.jpg"/></noscript>
-            </div>
-          </div>
-          <div class="wrapper textwrapper">
-            <div class="info sizable">
-              <div class="infoinner">
-              </div>
-            </div>
-          </div>
-        </div>
-        <div id="love-5" class="slide last">
+        <div id="love-4" class="slide last">
           <div class="wrapper buttonwrapper">
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
