--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                   <!-- span.projectType #{project.desc}--><span class="projectTitle">Connections</span></span><img data-src="thesis_cards" data-ext=".jpg" alt="" class="lazy front"/></a><a href="#bugs" class="projectLink"><span class="projectDesc">
                   <!-- span.projectType #{project.desc}--><span class="projectTitle">Specimens</span></span><img data-src="bugs-zoom1" data-ext=".jpg" alt="" class="lazy front"/></a><a href="#love" class="projectLink"><span class="projectDesc">
                   <!-- span.projectType #{project.desc}--><span class="projectTitle">Love</span></span><img data-src="love1" data-ext=".jpg" alt="" class="lazy front"/></a><a href="#jonah" class="projectLink"><span class="projectDesc">
-                  <!-- span.projectType #{project.desc}--><span class="projectTitle">Jonah</span></span><img data-src="jonah1" data-ext=".jpg" alt="" class="lazy front"/></a><a href="#ornate" class="projectLink"><span class="projectDesc">
+                  <!-- span.projectType #{project.desc}--><span class="projectTitle">Jonah</span></span><img data-src="jonah_cover2" data-ext=".jpg" alt="" class="lazy front"/></a><a href="#ornate" class="projectLink"><span class="projectDesc">
                   <!-- span.projectType #{project.desc}--><span class="projectTitle">Ornate</span></span><img data-src="ornate_abuse_close" data-ext=".jpg" alt="" class="lazy front"/></a>
             </div>
           </div>
@@ -611,8 +611,8 @@
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
           <div class="wrapper imagewrapper">
-            <div class="image sizable"><img alt="" data-src="jonah1" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/jonah1.jpg"/></noscript>
+            <div class="image sizable"><img alt="" data-src="jonah_cover2" data-ext=".jpg" class="lazy responsive"/>
+              <noscript><img alt="" src="img/400w/jonah_cover2.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -638,13 +638,77 @@
             </div>
           </div>
         </div>
-        <div id="jonah-3" class="slide last">
+        <div id="jonah-3" class="slide">
           <div class="wrapper buttonwrapper">
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
           <div class="wrapper imagewrapper">
-            <div class="image sizable"><img alt="" data-src="jonah2" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/jonah2.jpg"/></noscript>
+            <div class="image sizable"><img alt="" data-src="jonah_case2" data-ext=".jpg" class="lazy responsive"/>
+              <noscript><img alt="" src="img/400w/jonah_case2.jpg"/></noscript>
+            </div>
+          </div>
+          <div class="wrapper textwrapper">
+            <div class="info sizable">
+              <div class="infoinner">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="jonah-4" class="slide">
+          <div class="wrapper buttonwrapper">
+            <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
+          </div>
+          <div class="wrapper imagewrapper">
+            <div class="image sizable"><img alt="" data-src="jonah_pray" data-ext=".jpg" class="lazy responsive"/>
+              <noscript><img alt="" src="img/400w/jonah_pray.jpg"/></noscript>
+            </div>
+          </div>
+          <div class="wrapper textwrapper">
+            <div class="info sizable">
+              <div class="infoinner">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="jonah-5" class="slide">
+          <div class="wrapper buttonwrapper">
+            <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
+          </div>
+          <div class="wrapper imagewrapper">
+            <div class="image sizable"><img alt="" data-src="jonah_storm2" data-ext=".jpg" class="lazy responsive"/>
+              <noscript><img alt="" src="img/400w/jonah_storm2.jpg"/></noscript>
+            </div>
+          </div>
+          <div class="wrapper textwrapper">
+            <div class="info sizable">
+              <div class="infoinner">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="jonah-6" class="slide">
+          <div class="wrapper buttonwrapper">
+            <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
+          </div>
+          <div class="wrapper imagewrapper">
+            <div class="image sizable"><img alt="" data-src="jonah_beach3" data-ext=".jpg" class="lazy responsive"/>
+              <noscript><img alt="" src="img/400w/jonah_beach3.jpg"/></noscript>
+            </div>
+          </div>
+          <div class="wrapper textwrapper">
+            <div class="info sizable">
+              <div class="infoinner">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="jonah-7" class="slide last">
+          <div class="wrapper buttonwrapper">
+            <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
+          </div>
+          <div class="wrapper imagewrapper">
+            <div class="image sizable"><img alt="" data-src="jonah_colophon" data-ext=".jpg" class="lazy responsive"/>
+              <noscript><img alt="" src="img/400w/jonah_colophon.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
