Add students pages

--- a/students.html
+++ b/students.html
@@ -22,11 +22,54 @@
       <h1>Nate Walton</h1>
       <nav><a href="/">Articles</a><a href="/">Work</a><a href="/">Teaching</a><a href="/">Contact</a></nav>
     </header>
-    <div class="main portfolio students show-info">
+    <div class="main portfolio show-info">
       <nav><a href="#" class="ir next">Next slide</a><a href="#" class="ir prev">Previous slide</a></nav>
       <div id="intro" data-project="0" class="project">
         <div class="title">
-          <h2>Student Work</h2>
+          <h2>Work</h2>
+        </div>
+        <div id="intro-1" class="slide intro last">
+          <div class="wrapper">
+            <div class="sizable"><a href="#gifts" class="projectLink"><span class="projectDesc">
+                  <!-- span.projectType #{project.desc}--><span class="projectTitle">Sacred Gifts</span></span><img data-src="sg_nav" data-ext=".jpg" alt="" class="lazy front"/></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div data-project='1' id="gifts" class="project">
+        <div class="title">
+          <h2><a href="#gifts">Sacred Gifts</a></h2>
+        </div>
+        <div id="gifts-1" class="slide intro">
+          <div class="wrapper">
+            <div class="introimage"><img data-src="sg.png" data-ext="" alt="" class="lazy titleImage"/></div>
+          </div>
+          <div class="wrapper">
+            <div class="introtext">
+              <h3>Interface Design</h3>
+              <p><span style="margin-left:-0.24em" class="dropcap">T</span><span style="margin-left:-0.1em" class="leader">he BYU Museum of Art</span><span> wanted an iPad app to supplement and enhance the experience of their <i>Sacred Gifts</i> exhibition. The interface was meant to be easy to use (by even the least savvy patrons) and to maintain focus, both visually and conceptually, on the artwork.</span></p>
+            </div>
+          </div>
+        </div>
+        <div id="gifts-2" class="slide last">
+          <div class="wrapper buttonwrapper">
+            <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
+          </div>
+          <div class="wrapper imagewrapper">
+            <div class="image sizable"><img alt="" data-src="sg_nav" data-ext=".jpg" class="lazy responsive"/>
+              <noscript><img alt="" src="img/400w/sg_nav.jpg"/></noscript>
+            </div>
+          </div>
+          <div class="wrapper textwrapper">
+            <div class="info sizable">
+              <div class="infoinner">
+                <h3>Navigation</h3>
+                <ul>
+                  <li>info here</li>
+                </ul>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
