--- a/students.html
+++ b/students.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <title>Nate Walton</title>
+    <title>Nate Walton: Student Work</title>
     <meta name="description" content="Description about your department."/>
     <meta name="author" content="Your Department Name"/>
     <meta name="keywords" content="keyword 1, keyword 2, keyword 3"/>
@@ -17,10 +17,10 @@
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
     <script src="js/init.min.js"></script>
   </head>
-  <body>
+  <body class="teaching">
     <header class="main">
       <h1>Nate Walton</h1>
-      <nav><a href="/">Articles</a><a href="/">Work</a><a href="/">Teaching</a><a href="/">Contact</a></nav>
+      <nav><a href="/" class="work">Work</a><a href="/" class="teaching">Teaching</a><a href="/" class="contact">Contact</a></nav>
     </header>
     <div class="main portfolio show-info">
       <nav><a href="#" class="ir next">Next slide</a><a href="#" class="ir prev">Previous slide</a></nav>
