Add student images, update portfolio images

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
   <body class="work">
     <header class="main">
       <h1>Nate Walton</h1>
-      <nav><a href="/" class="work">Work</a><a href="/" class="teaching">Teaching</a><a href="/" class="contact">Contact</a></nav>
+      <nav><a href="/" class="home">Home</a><a href="/portfolio.html" class="work">Work</a><a href="/students.html" class="teaching">Teaching</a><a href="/contact.html" class="contact">Contact</a></nav>
     </header>
     <div class="main portfolio show-info">
       <nav><a href="#" class="ir next">Next slide</a><a href="#" class="ir prev">Previous slide</a></nav>
@@ -31,14 +31,14 @@
         <div id="intro-1" class="slide intro last">
           <div class="wrapper">
             <div class="sizable"><a href="#gifts" class="projectLink"><span class="projectDesc">
-                  <!-- span.projectType #{project.desc}--><span class="projectTitle">Sacred Gifts</span></span><img data-src="sg_nav" data-ext=".jpg" alt="" class="lazy front"/></a><a href="#byu" class="projectLink"><span class="projectDesc">
+                  <!-- span.projectType #{project.desc}--><span class="projectTitle">Sacred Gifts</span></span><img data-src="sg_home" data-ext=".jpg" alt="" class="lazy front"/></a><a href="#byu" class="projectLink"><span class="projectDesc">
                   <!-- span.projectType #{project.desc}--><span class="projectTitle">BYU Web</span></span><img data-src="byu-home" data-ext=".jpg" alt="" class="lazy front"/></a><a href="#byutickets" class="projectLink"><span class="projectDesc">
                   <!-- span.projectType #{project.desc}--><span class="projectTitle">BYU Tickets</span></span><img data-src="byutickets_full" data-ext=".jpg" alt="" class="lazy front"/></a><a href="#ls" class="projectLink"><span class="projectDesc">
                   <!-- span.projectType #{project.desc}--><span class="projectTitle">BYU Learning Suite</span></span><img data-src="ls-scores" data-ext=".png" alt="" class="lazy front"/></a><a href="#thesis" class="projectLink"><span class="projectDesc">
                   <!-- span.projectType #{project.desc}--><span class="projectTitle">Connections</span></span><img data-src="thesis_cards" data-ext=".jpg" alt="" class="lazy front"/></a><a href="#bugs" class="projectLink"><span class="projectDesc">
-                  <!-- span.projectType #{project.desc}--><span class="projectTitle">Specimens</span></span><img data-src="bugs-zoom1" data-ext=".jpg" alt="" class="lazy front"/></a><a href="#love" class="projectLink"><span class="projectDesc">
+                  <!-- span.projectType #{project.desc}--><span class="projectTitle">Specimens</span></span><img data-src="bugs_typographic" data-ext=".jpg" alt="" class="lazy front"/></a><a href="#love" class="projectLink"><span class="projectDesc">
                   <!-- span.projectType #{project.desc}--><span class="projectTitle">Love</span></span><img data-src="love1" data-ext=".jpg" alt="" class="lazy front"/></a><a href="#jonah" class="projectLink"><span class="projectDesc">
-                  <!-- span.projectType #{project.desc}--><span class="projectTitle">Jonah</span></span><img data-src="jonah_cover2" data-ext=".jpg" alt="" class="lazy front"/></a><a href="#ornate" class="projectLink"><span class="projectDesc">
+                  <!-- span.projectType #{project.desc}--><span class="projectTitle">Jonah</span></span><img data-src="jonah_storm2" data-ext=".jpg" alt="" class="lazy front"/></a><a href="#ornate" class="projectLink"><span class="projectDesc">
                   <!-- span.projectType #{project.desc}--><span class="projectTitle">Ornate</span></span><img data-src="ornate_abuse_close" data-ext=".jpg" alt="" class="lazy front"/></a>
             </div>
           </div>
@@ -59,13 +59,53 @@
             </div>
           </div>
         </div>
-        <div id="gifts-2" class="slide last">
+        <div id="gifts-2" class="slide">
           <div class="wrapper buttonwrapper">
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
           <div class="wrapper imagewrapper">
-            <div class="image sizable"><img alt="" data-src="sg_nav" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/sg_nav.jpg"/></noscript>
+            <div class="image sizable"><img alt="" data-src="sg_home" data-ext=".jpg" class="lazy responsive"/>
+              <noscript><img alt="" src="img/400w/sg_home.jpg"/></noscript>
+            </div>
+          </div>
+          <div class="wrapper textwrapper">
+            <div class="info sizable">
+              <div class="infoinner">
+                <h3>Home screen</h3>
+                <ul>
+                  <li>info here</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="gifts-3" class="slide">
+          <div class="wrapper buttonwrapper">
+            <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
+          </div>
+          <div class="wrapper imagewrapper">
+            <div class="image sizable"><img alt="" data-src="sg_tombstone" data-ext=".jpg" class="lazy responsive"/>
+              <noscript><img alt="" src="img/400w/sg_tombstone.jpg"/></noscript>
+            </div>
+          </div>
+          <div class="wrapper textwrapper">
+            <div class="info sizable">
+              <div class="infoinner">
+                <h3>Navigation</h3>
+                <ul>
+                  <li>info here</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="gifts-4" class="slide last">
+          <div class="wrapper buttonwrapper">
+            <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
+          </div>
+          <div class="wrapper imagewrapper">
+            <div class="image sizable"><img alt="" data-src="sg_media" data-ext=".jpg" class="lazy responsive"/>
+              <noscript><img alt="" src="img/400w/sg_media.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -239,23 +279,7 @@
             </div>
           </div>
         </div>
-        <div id="ls-4" class="slide">
-          <div class="wrapper buttonwrapper">
-            <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
-          </div>
-          <div class="wrapper imagewrapper">
-            <div class="image sizable"><img alt="" data-src="ls-grader-exam-essay" data-ext=".png" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/ls-grader-exam-essay.png"/></noscript>
-            </div>
-          </div>
-          <div class="wrapper textwrapper">
-            <div class="info sizable">
-              <div class="infoinner">
-              </div>
-            </div>
-          </div>
-        </div>
-        <div id="ls-5" class="slide last">
+        <div id="ls-4" class="slide last">
           <div class="wrapper buttonwrapper">
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
@@ -324,6 +348,22 @@
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
           <div class="wrapper imagewrapper">
+            <div class="image sizable"><img alt="" data-src="thesis-all" data-ext=".jpg" class="lazy responsive"/>
+              <noscript><img alt="" src="img/400w/thesis-all.jpg"/></noscript>
+            </div>
+          </div>
+          <div class="wrapper textwrapper">
+            <div class="info sizable">
+              <div class="infoinner">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="thesis-5" class="slide">
+          <div class="wrapper buttonwrapper">
+            <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
+          </div>
+          <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="thesis_bible" data-ext=".jpg" class="lazy responsive"/>
               <noscript><img alt="" src="img/400w/thesis_bible.jpg"/></noscript>
             </div>
@@ -345,7 +385,7 @@
             </div>
           </div>
         </div>
-        <div id="thesis-5" class="slide">
+        <div id="thesis-6" class="slide">
           <div class="wrapper buttonwrapper">
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
@@ -382,7 +422,7 @@
             </div>
           </div>
         </div>
-        <div id="thesis-6" class="slide">
+        <div id="thesis-7" class="slide">
           <div class="wrapper buttonwrapper">
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
@@ -411,7 +451,7 @@
             </div>
           </div>
         </div>
-        <div id="thesis-7" class="slide">
+        <div id="thesis-8" class="slide">
           <div class="wrapper buttonwrapper">
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
@@ -442,7 +482,7 @@
             </div>
           </div>
         </div>
-        <div id="thesis-8" class="slide last">
+        <div id="thesis-9" class="slide last">
           <div class="wrapper buttonwrapper">
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
