--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body class="home">
     <header class="main">
       <h1>Nate Walton</h1>
-      <nav><a href="/" class="work">Work</a><a href="/" class="teaching">Teaching</a><a href="/" class="contact">Contact</a></nav>
+      <nav><a href="/" class="home">Home</a><a href="/portfolio.html" class="work">Work</a><a href="/students.html" class="teaching">Teaching</a><a href="/contact.html" class="contact">Contact</a></nav>
     </header>
     <div class="feature">
       <div class="quote">Good design is a lot like clear thinking made visual.</div>
