--- a/students.html
+++ b/students.html
@@ -20,7 +20,7 @@
   <body class="teaching">
     <header class="main">
       <h1>Nate Walton</h1>
-      <nav><a href="/" class="work">Work</a><a href="/" class="teaching">Teaching</a><a href="/" class="contact">Contact</a></nav>
+      <nav><a href="/" class="home">Home</a><a href="/portfolio.html" class="work">Work</a><a href="/students.html" class="teaching">Teaching</a><a href="/contact.html" class="contact">Contact</a></nav>
     </header>
     <div class="main portfolio show-info">
       <nav><a href="#" class="ir next">Next slide</a><a href="#" class="ir prev">Previous slide</a></nav>
