Update home page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header class="main">
       <h1><a href="/">Nate Walton</a></h1>
       <nav><a href="/" class="home">Home</a><a href="/portfolio" class="work">Work</a><a href="/students" class="teaching">Teaching</a>
-        <!-- a.contact(href="/contact") Contact-->
+        <!-- a.contact(href="/contact" + extension) Find me-->
       </nav>
     </header>
     <div class="feature">
@@ -29,11 +29,9 @@
       <div class="byline">Edward Tufte</div>
     </div>
     <div class="content">
-      <div class="wrapper">
-        <div class="heading">Portfolio</div><a href="#"><img src="" title="Image 1"/></a><a href="#"><img src="" title="Image 2"/></a><a href="#"><img src="" title="Image 3"/></a>
+      <div class="wrapper"><a href="/portfolio" class="heading">Portfolio</a><a href="/portfolio#gifts" class="preview toLoad"><span class="projectDesc"><span class="projectTitle">Sacred Gifts</span></span><img data-src="sg_home.jpg" alt="" class="lazy front"/></a><a href="/portfolio#byu" class="preview toLoad"><span class="projectDesc"><span class="projectTitle">BYU Web</span></span><img data-src="byu-home.jpg" alt="" class="lazy front"/></a><a href="/portfolio#thesis" class="preview toLoad"><span class="projectDesc"><span class="projectTitle">Connections</span></span><img data-src="thesis_cards.jpg" alt="" class="lazy front"/></a>
       </div>
-      <div class="wrapper">
-        <div class="heading">Student Work</div><a href="#"><img src="" title="Image 1"/></a><a href="#"><img src="" title="Image 2"/></a><a href="#"><img src="" title="Image 3"/></a>
+      <div class="wrapper"><a href="/students" class="heading">Student Work</a><a href="/students#poster" class="preview toLoad"><span class="projectDesc"><span class="projectTitle">Poster</span></span><img data-src="student/poster1.jpg" alt="" class="lazy front"/></a><a href="/students#album" class="preview toLoad"><span class="projectDesc"><span class="projectTitle">Album</span></span><img data-src="student/album1.jpg" alt="" class="lazy front"/></a><a href="/students#photoshop" class="preview toLoad"><span class="projectDesc"><span class="projectTitle">Photoshop</span></span><img data-src="student/photoshop3.jpg" alt="" class="lazy front"/></a>
       </div>
     </div>
     <footer class="main"></footer>
