--- a/students.html
+++ b/students.html
@@ -21,7 +21,7 @@
     <header class="main">
       <h1><a href="/">Nate Walton</a></h1>
       <nav><a href="/" class="home">Home</a><a href="/portfolio" class="work">Work</a><a href="/students" class="teaching">Teaching</a>
-        <!-- a.contact(href="/contact") Contact-->
+        <!-- a.contact(href="/contact" + extension) Find me-->
       </nav>
     </header>
     <div class="main portfolio show-info">
@@ -47,7 +47,7 @@
         </div>
         <div id="poster-0" class="slide intro">
           <div class="wrapper">
-            <div class="introimage"><img data-src="" data-ext="" alt="" class="lazy titleImage"/></div>
+            <div class="introimage"><img data-src="speed.jpg" data-ext="" alt="" class="lazy titleImage"/></div>
           </div>
           <div class="wrapper">
             <div class="introtext">
@@ -239,7 +239,7 @@
         </div>
         <div id="cd-0" class="slide intro">
           <div class="wrapper">
-            <div class="introimage"><img data-src="" data-ext="" alt="" class="lazy titleImage"/></div>
+            <div class="introimage"><img data-src="speed.jpg" data-ext="" alt="" class="lazy titleImage"/></div>
           </div>
           <div class="wrapper">
             <div class="introtext">
@@ -399,7 +399,7 @@
         </div>
         <div id="album-0" class="slide intro">
           <div class="wrapper">
-            <div class="introimage"><img data-src="" data-ext="" alt="" class="lazy titleImage"/></div>
+            <div class="introimage"><img data-src="speed.jpg" data-ext="" alt="" class="lazy titleImage"/></div>
           </div>
           <div class="wrapper">
             <div class="introtext">
@@ -511,7 +511,7 @@
         </div>
         <div id="photoshop-0" class="slide intro">
           <div class="wrapper">
-            <div class="introimage"><img data-src="" data-ext="" alt="" class="lazy titleImage"/></div>
+            <div class="introimage"><img data-src="speed.jpg" data-ext="" alt="" class="lazy titleImage"/></div>
           </div>
           <div class="wrapper">
             <div class="introtext">
