--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
     <header class="main">
       <h1><a href="/">Nate Walton</a></h1>
       <nav><a href="/" class="home">Home</a><a href="/portfolio" class="work">Work</a><a href="/students" class="teaching">Teaching</a>
-        <!-- a.contact(href="/contact") Contact-->
+        <!-- a.contact(href="/contact" + extension) Find me-->
       </nav>
     </header>
     <div class="main portfolio show-info">
@@ -192,7 +192,7 @@
         </div>
         <div id="byutickets-0" class="slide intro">
           <div class="wrapper">
-            <div class="introimage"><img data-src="" data-ext="" alt="" class="lazy titleImage"/></div>
+            <div class="introimage"><img data-src="speed.jpg" data-ext="" alt="" class="lazy titleImage"/></div>
           </div>
           <div class="wrapper">
             <div class="introtext">
@@ -240,7 +240,7 @@
         </div>
         <div id="ls-0" class="slide intro">
           <div class="wrapper">
-            <div class="introimage"><img data-src="" data-ext="" alt="" class="lazy titleImage"/></div>
+            <div class="introimage"><img data-src="speed.jpg" data-ext="" alt="" class="lazy titleImage"/></div>
           </div>
           <div class="wrapper">
             <div class="introtext">
@@ -784,7 +784,7 @@
         </div>
         <div id="ornate-0" class="slide intro">
           <div class="wrapper">
-            <div class="introimage"><img data-src="" data-ext="" alt="" class="lazy titleImage"/></div>
+            <div class="introimage"><img data-src="speed.jpg" data-ext="" alt="" class="lazy titleImage"/></div>
           </div>
           <div class="wrapper">
             <div class="introtext">
